Demo CAN Transmitter
Basic code for transmitting a floor call request is functional as of this commit

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ ctrlp.root
 *.ide.log
 
 2000 - Codebase/2300 - Embedded/2310 - Floor Controller/.metadata/.plugins/*
+2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/.settings/
+
+*.mk
+
+*.list
+
+*.launch
