Supervisor Re-write
Changes to Project
- Fixed a dependency issue that was causing compilation failure
- Deleted archive folder as it only contained unused files

Changes to CAN
- Added definitions of elevator protocol commands and IDs
- Made pcanTx() static (moved to source file)
- Made pcanRx() static (moved to source file)
- Removed some redundant comments from pcanRx()
- Made Txmsg local to pcanTx()
- Made Rxmsg local to pcanRx()
- Made h local to pcanTx()
- Made h2 local to pcanRx()
- Created processCANMsg(), this function handles reception and transmission of 
  messages without exposing the CAN subsystem to a user
  - Decision making code from main() has been moved to this function
  - Magic number removal on decision making code
- Changed header guard to match file name
- Removed unused defines from header
- Added file description comment blocks
- Added function description comment blocks
- Added more verbose status messages (for when CAN messages are received)
- Supervisor is now aware of entire protocol (can receive all messages meant for it)
- Supervisor will now service car controller floor requests

Chanes to main
- Replaced decision making code with call to processCANMsg()

--- a/2000 - Codebase/2300 - Embedded/2330 - Supervisory Controller/src/Makefile
+++ b/2000 - Codebase/2300 - Embedded/2330 - Supervisory Controller/src/Makefile
@@ -6,7 +6,7 @@ ODIR=obj
 
 LIBS=-l:libmysqlcppconn.so -lpcan
 
-_OBJ = main.o mainFunctions.o pcanFunctions.o databaseFunctions.o
+_OBJ = main.o CAN.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.cpp
