--- a/2000 - Codebase/2300 - Embedded/2330 - Supervisory Controller/src/Makefile
+++ b/2000 - Codebase/2300 - Embedded/2330 - Supervisory Controller/src/Makefile
@@ -1,19 +1,21 @@
 IDIR =../include
 LDIR =-L/usr/lib/arm-linux-gnueabihf
+LDIR2 = -L/usr/include
+LDIR3 = -L/usr/include/cppconn
 CC=g++
 CFLAGS=-I$(IDIR)
 ODIR=obj
 
 LIBS=-l:libmysqlcppconn.so -lpcan
 
-_OBJ = main.o CAN.o Supervisor.o linkedList.o
+_OBJ = main.o CAN.o Supervisor.o linkedList.o databaseFunctions.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.cpp
 	$(CC) -g -c -o $@ $< $(CFLAGS)
 
 main: $(OBJ)
-	g++ -g -o $@ $^ $(CFLAGS) $(LDIR) $(LIBS)
+	g++ -g -o $@ $^ $(CFLAGS) $(LDIR) $(LDIR2) $(LDIR3) $(LIBS)
 
 .PHONY: clean
 
